--- a/newsnote/pubspec.yaml
+++ b/newsnote/pubspec.yaml
@@ -25,6 +25,7 @@ dependencies:
     sdk: flutter
   webview_flutter:
   http: ^0.12.0+2
+  device_info: ^0.4.2+8
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
