--- a/newsnote/pubspec.yaml
+++ b/newsnote/pubspec.yaml
@@ -23,10 +23,10 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  webview_flutter:
+  webview_flutter: 0.3.20+2 
   http: ^0.12.0+2
   device_info: ^0.4.2+8
-
+  shared_preferences: ^0.5.7+3
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.3
