--- a/newsnote/android/app/build.gradle
+++ b/newsnote/android/app/build.gradle
@@ -60,4 +60,8 @@ flutter {
 
 dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+    implementation 'com.google.firebase:firebase-analytics:17.2.2'
+    implementation 'com.google.firebase:firebase-messaging:20.3.0'
 }
+
+apply plugin: 'com.google.gms.google-services'
